# chatbot-core-llm

./: .env.example  .gitignore  CLAUDE.md  README.md  api_speed_solutions.md  config.yaml  main.py  nlu_optimization_recommendations.py  parsing_test_results.json  performance_test_nlu.py  performance_test_response.py  phase2_multilevel_scoring.txt  pyproject.toml  quick_warmup_test.py  skip_warmup_main.py  test_context_aware.py  test_parsing_performance.py  test_phase1.py  test_phase1_simple.py  test_warmup_performance.py  todo-multimodal-feat.txt  todo.txt
data/product_detail/: products.json
note/: REFACTORING_SUMMARY.md
src/: config.py  models.py
src/config/: __init__.py  env_loader.py  manager.py
src/llm/: DYNAMIC_ROUTING.md  __init__.py  client.py  factory.py  processor.py  prompt.py  routing.py  utils.py
src/llm/node/: __init__.py  classification_llm.py  nlu_llm.py  parser.py  response_llm.py  utils.py
src/media/: __init__.py  processor.py  types.py
src/memory/: base.py  long_term.py  manager.py  short_term.py
src/models/: __init__.py  base.py  config.py  config_model.py  conversation.py  conversation_model.py  memory_model.py  message.py  message_model.py  nlu.py  nlu_model.py
src/tools/: README.md  __init__.py  base_tool.py  tool_loader.py
src/tools/data/: __init__.py  data_tools.py  json_loader.py
src/tools/utility/: __init__.py  qr_tools.py
src/utils/: cost_calculator.py  logging.py  redis_client.py  token_tracker.py
tests/: README.md  run_tests.py  test_routing_system.py  test_simple_integration.py  test_toolcall_system.py
